--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay
+        <com.staples.mobile.cfa.widget.LinearLayoutWithOverlay
             android:id="@+id/overlayable_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -27,7 +27,7 @@
                 android:text="@string/no_orders_found"
                 android:textColor="@android:color/darker_gray"/>
 
-        </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
+        </com.staples.mobile.cfa.widget.LinearLayoutWithOverlay>
 
         <!-- empty overlay-->
         <RelativeLayout
