--- a/app/src/main/res/layout/order_detail_fragment.xml
+++ b/app/src/main/res/layout/order_detail_fragment.xml
@@ -30,101 +30,91 @@
             android:layout_marginTop="10dp"
             android:textSize="20dip"
             android:textColor="@color/text_black"/>
-        </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/orderDate"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="16sp"
+        android:textColor="@color/text_black" />
 
     <LinearLayout
         android:id="@+id/sku_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:paddingBottom="8dp"
         android:paddingTop="0dp"
         android:orientation="vertical">
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Order Date"
-        android:id="@+id/orderDateLbl"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:textSize="16dip"
-        android:textColor="@color/text_black" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/orderDate"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:textSize="16dip"
-            android:textColor="@color/text_black" />
-    </RelativeLayout>
+    <!--<RelativeLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Order Date"-->
+        <!--android:id="@+id/orderDateLbl"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:textSize="16sp"-->
+        <!--android:textColor="@color/text_black" />-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/orderDate"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:textSize="16dip"-->
+            <!--android:textColor="@color/text_black" />-->
+    <!--</RelativeLayout>-->
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Order Total"
-            android:id="@+id/orderTotalLbl"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:textSize="16dip"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/text_black"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/orderQtyLbl"
-            android:textSize="16dip"
-            android:textColor="@color/text_black"
-            android:layout_alignTop="@+id/orderTotalLbl"
-            android:layout_toRightOf="@+id/orderTotalLbl"
-            android:layout_toEndOf="@+id/orderTotalLbl" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/orderTotal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:textSize="16dip"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/text_black"
-            android:layout_alignParentRight="true"/>
-    </RelativeLayout>
+    <!--<RelativeLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Order Total"-->
+            <!--android:id="@+id/orderTotalLbl"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:textSize="16dip"-->
+            <!--android:layout_marginBottom="10dp"-->
+            <!--android:textColor="@color/text_black"/>-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/orderQtyLbl"-->
+            <!--android:textSize="16dip"-->
+            <!--android:textColor="@color/text_black"-->
+            <!--android:layout_alignTop="@+id/orderTotalLbl"-->
+            <!--android:layout_toRightOf="@+id/orderTotalLbl"-->
+            <!--android:layout_toEndOf="@+id/orderTotalLbl" />-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/orderTotal"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:textSize="16dip"-->
+            <!--android:layout_marginBottom="10dp"-->
+            <!--android:textColor="@color/text_black"-->
+            <!--android:layout_alignParentRight="true"/>-->
+    <!--</RelativeLayout>-->
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Estimated Delivery"
-            android:id="@+id/deliveryLbl"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:textSize="16dip"
-            android:textColor="@color/text_black" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/deliveryDateTV"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:textSize="16dip"
-            android:textColor="@color/text_black" />
-        </RelativeLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
