--- a/app/src/main/res/layout/shipment_listitem.xml
+++ b/app/src/main/res/layout/shipment_listitem.xml
@@ -10,6 +10,21 @@
         android:layout_marginTop="10dp"
         android:textSize="16dip"
         android:textColor="@color/text_black"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/deliveryDateTV"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:textSize="16sp"
+        android:textColor="@color/text_black" />
+    <View
+        android:id="@+id/horizontal_rule"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/background_light_gray" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -21,57 +36,57 @@
         android:id="@+id/skuImage"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"/>
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/shipmentTitle"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textSize="16dip"
-            android:textColor="@color/text_black"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/shipmentPrice"
-            android:textSize="16dip"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/text_green" />
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Quantity"
-                android:id="@+id/shipmentQtyLbl"
+                android:id="@+id/shipmentTitle"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:textSize="16dip"
-                android:textColor="@color/text_light_gray" />
+                android:textColor="@color/text_black"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/shipmentQty"
+                android:id="@+id/shipmentPrice"
                 android:textSize="16dip"
-                android:layout_marginLeft="10dip"
-                android:textColor="@color/text_light_gray" />
-            </LinearLayout>
+                android:layout_marginTop="10dp"
+                android:textColor="@color/text_green" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Quantity"
+                    android:id="@+id/shipmentQtyLbl"
+                    android:textSize="16dip"
+                    android:textColor="@color/text_light_gray" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/shipmentQty"
+                    android:textSize="16dip"
+                    android:layout_marginLeft="10dip"
+                    android:textColor="@color/text_light_gray" />
+                </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    </LinearLayout>
-
-    <View
-        android:id="@+id/horizontal_rule"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="10dip"
-        android:background="@color/background_light_gray" />
+    <!--<View-->
+        <!--android:id="@+id/horizontal_rule"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:background="@color/background_light_gray" />-->
 
 </LinearLayout>
