--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -21,6 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/orderErrorTV"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="24dp"
                 android:visibility="gone"
                 android:textSize="20dip"
