--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:text="@string/email_title"
+        android:text="@string/email"
         android:id="@+id/emailLabel"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
@@ -35,7 +35,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:text="@string/username_title"
+        android:text="@string/username_label"
         style="@style/GraySubheading"
         android:id="@+id/userNameLabel"
         android:paddingTop="10dp"
