--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,6 +72,7 @@
         <item name="android:paddingLeft">4dp</item>
         <item name="android:paddingRight">4dp</item>
         <item name="android:gravity">start|bottom</item>
+        <item name="android:singleLine">true</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">#333333</item>
         <item name="textDualSize">12sp</item>
