--- a/app/src/main/res/layout/weekly_ad_categories_item.xml
+++ b/app/src/main/res/layout/weekly_ad_categories_item.xml
@@ -13,9 +13,10 @@
         android:background="@color/background_white"
         android:orientation="horizontal">
         <LinearLayout
-            android:layout_width="0dip"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="1"
+            android:padding="16dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/weekly_ad_category_title_text"
@@ -23,25 +24,22 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="16sp"
-                android:paddingLeft="15dip"
-                android:paddingTop="10dip"
                 android:textColor="@color/text_black"/>
             <TextView
                 android:id="@+id/weekly_ad_category_deals_count_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:paddingTop="10dp"
-                android:paddingLeft="15dip"
                 android:textColor="@color/text_red"/>
-            </LinearLayout>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/weekly_ad_category_image"
             android:layout_width="@dimen/weekly_ad_category_item_image_width"
-            android:layout_height="@dimen/weekly_ad_list_item_image_height"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingRight="15dp"/>
+            android:layout_height="@dimen/weekly_ad_category_item_image_height"
+            android:scaleType="fitEnd"
+            android:background="@color/background_light_blue"
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"/>
     </LinearLayout>
-    </android.support.v7.widget.CardView>
+</android.support.v7.widget.CardView>
