--- a/app/src/main/res/layout/weekly_ad_list.xml
+++ b/app/src/main/res/layout/weekly_ad_list.xml
@@ -2,8 +2,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/weekly_ad_list_items"
+
+    <!--tabbed section-->
+    <TabHost
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+        android:id="@android:id/tabhost">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <!--scrollable tabs-->
+            <HorizontalScrollView
+                android:id="@+id/tabs_scrollview"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:fillViewport="true"
+                android:scrollbars="none">
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </HorizontalScrollView>
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <!--list of ads-->
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/weekly_ad_list_items"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"/>
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+    </TabHost>
+
 </com.staples.mobile.cfa.widget.AnimatorLayout>
