--- a/app/src/main/res/layout/add_creditcard_fragment.xml
+++ b/app/src/main/res/layout/add_creditcard_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -73,4 +73,4 @@
             android:textColor="@color/text_white"
             android:layout_toLeftOf="@+id/addCCBtn"/>
         </RelativeLayout>
-</LinearLayout>
+</com.staples.mobile.cfa.widget.AnimatorLayout>
