--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
-  -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/checkout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
 
 <!-- scrollable contents -->
     <ScrollView
@@ -19,7 +15,6 @@
         android:background="#ffffff">
         <!--dynamically add content here-->
     </ScrollView>
-
 
     <!-- math story and Submit button -->
     <RelativeLayout
@@ -82,7 +77,6 @@
             android:padding="0dp"
             android:textColor="@color/text_nearly_black"
             />
-
 
         <!-- shipping charge -->
         <TextView
@@ -185,9 +179,6 @@
                 <!--android:textColor="@color/text_white"-->
                 <!--/>-->
         <!--</RelativeLayout>-->
-
     </RelativeLayout>
-
-
-</LinearLayout>
+</com.staples.mobile.cfa.widget.AnimatorLayout>
 
