--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/login_fragment_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -44,4 +43,4 @@
             </FrameLayout>
         </LinearLayout>
     </TabHost>
-</LinearLayout>
+</com.staples.mobile.cfa.widget.AnimatorLayout>
