--- a/app/src/main/res/layout/coupon_item_applied.xml
+++ b/app/src/main/res/layout/coupon_item_applied.xml
@@ -38,8 +38,7 @@
         android:background="@color/background_extra_light_gray"
         android:textColor="@color/text_black"
         android:text="@string/remove"
-        android:textSize="14dp"
-        android:fontFamily="sans-serif"
+        android:textSize="14sp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
