--- a/app/src/main/res/layout/order_detail_fragment.xml
+++ b/app/src/main/res/layout/order_detail_fragment.xml
@@ -20,7 +20,7 @@
             android:id="@+id/orderNumberLbl"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:textSize="20dip"
+            android:textSize="20sp"
             android:textColor="@color/text_black"/>
         <TextView
             android:layout_width="wrap_content"
@@ -28,7 +28,7 @@
             android:id="@+id/orderNumber"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:textSize="20dip"
+            android:textSize="20sp"
             android:textColor="@color/text_black"/>
     </LinearLayout>
 
@@ -74,7 +74,7 @@
             <!--android:layout_alignParentRight="true"-->
             <!--android:layout_marginRight="10dp"-->
             <!--android:layout_marginTop="10dp"-->
-            <!--android:textSize="16dip"-->
+            <!--android:textSize="16sp"-->
             <!--android:textColor="@color/text_black" />-->
     <!--</RelativeLayout>-->
 
@@ -89,14 +89,14 @@
             <!--android:layout_marginLeft="10dp"-->
             <!--android:layout_marginRight="10dp"-->
             <!--android:layout_marginTop="10dp"-->
-            <!--android:textSize="16dip"-->
+            <!--android:textSize="16sp"-->
             <!--android:layout_marginBottom="10dp"-->
             <!--android:textColor="@color/text_black"/>-->
         <!--<TextView-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
             <!--android:id="@+id/orderQtyLbl"-->
-            <!--android:textSize="16dip"-->
+            <!--android:textSize="16sp"-->
             <!--android:textColor="@color/text_black"-->
             <!--android:layout_alignTop="@+id/orderTotalLbl"-->
             <!--android:layout_toRightOf="@+id/orderTotalLbl"-->
@@ -108,7 +108,7 @@
             <!--android:layout_marginLeft="10dp"-->
             <!--android:layout_marginRight="10dp"-->
             <!--android:layout_marginTop="10dp"-->
-            <!--android:textSize="16dip"-->
+            <!--android:textSize="16sp"-->
             <!--android:layout_marginBottom="10dp"-->
             <!--android:textColor="@color/text_black"-->
             <!--android:layout_alignParentRight="true"/>-->
@@ -132,7 +132,7 @@
                 android:id="@+id/paymentLbl"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="20dip"
+                android:textSize="20sp"
                 android:textColor="@color/text_black" />
             <TextView
                 android:layout_width="wrap_content"
@@ -141,7 +141,7 @@
                 android:id="@+id/paymentMethodLbl"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_light_gray" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -160,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/cardInfoTV"
                     android:layout_marginLeft="10dp"
-                    android:textSize="16dip"
+                    android:textSize="16sp"
                     android:textColor="@color/text_black" />
             </LinearLayout>
         </LinearLayout>
@@ -181,7 +181,7 @@
                 android:id="@+id/addressLbl"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_light_gray" />
             <TextView
                 android:layout_width="wrap_content"
@@ -189,7 +189,7 @@
                 android:id="@+id/billingNameTV"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
             <TextView
                 android:layout_width="wrap_content"
@@ -197,7 +197,7 @@
                 android:id="@+id/addressTV"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
         </LinearLayout>
         <View
@@ -217,7 +217,7 @@
             android:id="@+id/orderFinalLbl"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:textSize="20dip"
+            android:textSize="20sp"
             android:textColor="@color/text_black" />
 
         <RelativeLayout
@@ -231,7 +231,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
             <TextView
                 android:layout_width="wrap_content"
@@ -240,7 +240,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
         </RelativeLayout>
 
@@ -255,7 +255,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
             <TextView
                 android:layout_width="wrap_content"
@@ -264,7 +264,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_green" />
         </RelativeLayout>
 
@@ -279,7 +279,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
             <TextView
                 android:layout_width="wrap_content"
@@ -288,7 +288,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_green" />
         </RelativeLayout>
 
@@ -303,7 +303,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
             <TextView
                 android:layout_width="wrap_content"
@@ -312,7 +312,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
         </RelativeLayout>
 
@@ -327,7 +327,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
             <TextView
                 android:layout_width="wrap_content"
@@ -336,7 +336,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="16dip"
+                android:textSize="16sp"
                 android:textColor="@color/text_black" />
         </RelativeLayout>
 
