--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -24,7 +24,7 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="24dp"
                 android:visibility="gone"
-                android:textSize="20dip"
+                android:textSize="20sp"
                 android:text="@string/no_orders_found"
                 android:textColor="@android:color/darker_gray"/>
 
@@ -61,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:textSize="18dp"/>
+                    android:textSize="18sp"/>
                 <ImageView
                     android:id="@+id/close_button"
                     android:layout_width="wrap_content"
@@ -76,13 +76,13 @@
                 android:id="@+id/carrier"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
             <!--tracking number-->
             <TextView
                 android:id="@+id/tracking_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
             <!--horizontal rule-->
             <View
@@ -97,7 +97,7 @@
                 android:id="@+id/delivery_scans"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"/>
+                android:textSize="14sp"/>
 
         </LinearLayout>
 
