--- a/app/src/main/res/layout/order_item_row.xml
+++ b/app/src/main/res/layout/order_item_row.xml
@@ -9,7 +9,7 @@ android:id="@+id/orderLayout">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textColor="@android:color/black"
-    android:textSize="18dip"
+    android:textSize="18sp"
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
@@ -18,7 +18,7 @@ android:id="@+id/orderLayout">
     android:id="@+id/numItemsTV"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="18dip"
+    android:textSize="18sp"
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
@@ -28,7 +28,7 @@ android:id="@+id/orderLayout">
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:id="@+id/orderStatusTV"
-    android:textSize="18dip"
+    android:textSize="18sp"
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
@@ -39,7 +39,7 @@ android:id="@+id/orderLayout">
     android:id="@+id/orderDeliveryTV"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="18dip"
+    android:textSize="18sp"
     android:layout_below="@+id/orderStatusTV"
     android:textColor="@android:color/black"
     android:paddingTop="10dp"
