--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -19,7 +19,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/inStoreTV"
                 android:paddingTop="10dp"
-                android:textSize="12dp"
+                android:textSize="12sp"
                 android:textColor="@color/text_red"
                 android:gravity="center"
                 android:visibility="gone"
@@ -52,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
-                    android:paddingLeft="10dip"
+                    android:paddingLeft="10dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:textStyle="bold"
@@ -61,8 +61,8 @@
                     android:id="@+id/weeklyad_price_extension"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="10dp"
-                    android:paddingLeft="3dip"
+                    android:textSize="10sp"
+                    android:paddingLeft="3dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:textColor="@color/text_gray"
