--- a/app/src/main/res/layout/coupon_item_add.xml
+++ b/app/src/main/res/layout/coupon_item_add.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
-  -->
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/coupon_addition_layout"
     android:layout_width="match_parent"
@@ -26,12 +22,10 @@
         android:layout_gravity="center_vertical"
         android:background="@color/background_red_submission"
         android:text="@string/add"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textColor="@color/text_white"
-        android:fontFamily="sans-serif"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        />
+        android:paddingRight="8dp"/>
 </RelativeLayout>
