--- a/app/src/main/res/layout/coupon_item_redeemable.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable.xml
@@ -8,8 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="4dp"
-    android:paddingBottom="4dp"
-    >
+    android:paddingBottom="4dp">
 
     <!--text fields-->
     <LinearLayout
@@ -22,13 +21,11 @@
             android:id="@+id/coupon_item_field1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="100dp"
-            />
+            android:minWidth="100dp"/>
         <TextView
             android:id="@+id/coupon_item_field2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <!--ADD button-->
@@ -40,14 +37,12 @@
         android:layout_gravity="center_vertical"
         android:background="@color/background_red_submission"
         android:text="@string/add"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textColor="@color/text_white"
-        android:fontFamily="sans-serif"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        />
+        android:paddingRight="8dp"/>
 
     <!--REMOVE button (only used in rewards dashboard)-->
     <Button
@@ -58,14 +53,12 @@
         android:layout_gravity="center_vertical"
         android:background="@color/background_extra_light_gray"
         android:text="@string/remove"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textColor="@color/text_black"
-        android:fontFamily="sans-serif"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:visibility="gone"
-        />
+        android:visibility="gone"/>
 
 </RelativeLayout>
