--- a/app/src/main/res/layout/notify_prefs_fragment.xml
+++ b/app/src/main/res/layout/notify_prefs_fragment.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:text="@string/alias_text"/>
     <EditText
         android:id="@+id/alias_text"
