--- a/app/src/main/res/layout/reset_password_fragment.xml
+++ b/app/src/main/res/layout/reset_password_fragment.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="10dip"
     android:paddingLeft="10dip"
     android:paddingRight="10dip">
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,8 +12,7 @@
         android:ems="10"
         android:hint="@string/email"
         android:id="@+id/emailTV"
-        android:layout_gravity="center_horizontal" />
-
+        android:layout_gravity="center_horizontal"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,6 +20,4 @@
         android:id="@+id/resetPasswordBtn"
         android:layout_marginTop="20dp"
         android:textColor="@color/text_white"/>
-
-
-</LinearLayout>
+</com.staples.mobile.cfa.widget.AnimatorLayout>
