--- a/app/src/main/res/layout/rewards_linking.xml
+++ b/app/src/main/res/layout/rewards_linking.xml
@@ -46,8 +46,7 @@
         android:layout_below="@id/rewards_phone_number"
         android:layout_alignParentRight="true"
         android:text="@string/link_account"
-        android:textSize="16dp"
-        android:fontFamily="sans-serif"
+        android:textSize="16sp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
