--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -196,8 +196,8 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/select_sku"
-            android:textSize="16dip"
-            android:paddingRight="10dip"
+            android:textSize="16sp"
+            android:paddingRight="10dp"
             android:text="@string/sku_set_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
