--- a/app/src/main/res/layout/login_signin_page.xml
+++ b/app/src/main/res/layout/login_signin_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/login_signin"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -49,4 +50,4 @@
         android:layout_below="@+id/password"
         android:layout_centerHorizontal="true" />
 
-</com.staples.mobile.cfa.widget.AnimatorLayout>
+</RelativeLayout>
