--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -35,7 +35,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:text="@string/username_label"
+        android:text="@string/username"
         style="@style/GraySubheading"
         android:id="@+id/userNameLabel"
         android:paddingTop="10dp"
