--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -24,7 +24,8 @@
                 android:textColor="@color/text_red"
                 android:gravity="center"
                 android:visibility="gone"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:text="@string/avail_retailonly"/>
             <ImageView
                 android:id="@+id/weekly_ad_list_image"
                 android:layout_width="@dimen/weekly_ad_list_item_image_width"
@@ -60,7 +61,7 @@
                     android:textStyle="bold"
                     android:textColor="@color/text_red"/>
                 <TextView
-                    android:id="@+id/weeklyad_price_extension"
+                    android:id="@+id/weekly_ad_price_extension"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="10sp"
@@ -68,6 +69,7 @@
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:textColor="@color/text_gray"
+                    android:text="@string/each"
                     android:visibility="gone"/>
             </LinearLayout>
         </LinearLayout>
@@ -78,6 +80,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:paddingRight="10dp"
+            android:src="@drawable/add_to_cart"
             android:visibility="gone"/>
         </RelativeLayout>
 
