--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -12,6 +12,8 @@
     <dimen name="add_button_margin">16dp</dimen>
     <dimen name="round_button_diameter">50dp</dimen>
     <dimen name="store_schedule_tabstop">70sp</dimen>
+    <dimen name="weekly_ad_image_width">240dp</dimen>
+    <dimen name="weekly_ad_image_height">240dp</dimen>
     <dimen name="weekly_ad_list_item_image_width">120dp</dimen>
     <dimen name="weekly_ad_list_item_image_height">120dp</dimen>
     <dimen name="weekly_ad_category_item_image_width">100dp</dimen>
